# DawnDesignTool

./: .gitignore  HALE_03.json  Parameter_sweep.py  Plot Strain Field.py  README.md  aero_demo.py  analyze_sweep_results.py  cache.npy  cd_function.npy  cessna152.py  cl_function.npy  deprecated_code.py  des_vars.json  design_opt.py  design_opt_solar.py  design_opt_solar_odysseus_check.py  design_opt_solar_sweep.py  design_opt_sweep.py  dynamics_workbook.py  geometry_spreadsheet.csv  ice_dyn_design_opt.py  interpolate_utils.py  last_solution.sol  mass_budget.csv  new_design_opt.py  new_design_opt_simple.py  objective_sweep.py  parameter_combinations.csv  pareto_front_analysis.py  parse_outputs.py  payload_power_vs_mission_analysis  payload_vs_mission_analysis.py  payload_vs_mission_run.py  plot_functions.py  plot_strat_height.py  plot_wind_speeds.py  plots_for_jim.py  print_key_data.py  propulsion_report.py  pyproject.toml  (+22 more)
CoDR Stage/: design_opt_solar_dynamic_frozen.py  design_opt_solar_dynamic_frozen_sweep.py  design_opt_solar_dynamic_frozen_to_sweep.py  design_opt_solar_dynamic_frozen_trajectory_pretty_plot.py  design_opt_solar_dynamic_frozen_trajectory_time_graphs.py  design_opt_solar_dynamic_no_free_boom.py  design_opt_solar_dynamic_not_trimmed.py  design_opt_solar_static.py
cache/: 10kg_payload.csv  10kg_payload_100W.csv  10kg_payload_350_batteries.csv  10kg_payload_400_batteries.csv  10kg_payload_500_batteries.csv  10kg_payload_ascent.csv  10kg_payload_continuous_power.csv  10kg_payload_nightpower.csv  10kg_payload_no_cycling.csv  10kg_payload_sunpower.csv  (+126 more)
(+534 files in other folders)
