[tool.poetry]
name = "dawndesigntool"
version = "0.1.0"
description = "Design tool for the Dawn Solar airplane"
authors = ["Peter Sharpe <pds@mit.edu>", "Annick Dewald <adewald@mit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
aerosandbox = {version = "^3.2.6", extras = ["full"]}
numpy = "^1.21.2"
pandas = "^1.3.3"
plotly = "^5.3.1"
casadi = "3.5.5"
tqdm = "^4.62.2"
scipy = "^1.7.1"
seaborn = "^0.11.2"
func_timeout = "^4.3.5"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
